# letrack

./: .gitignore  README.md  compose.yml  docker-compose.yml  flake.nix  mise.toml  mqtt.bash  mqttstress.bash  orval.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  swagger.json  tailwind.config.ts
.github/workflows/: build-api.yaml  build.yaml  docker.yaml
.zed/: tasks.json
api/: Dockerfile  Program.cs  appsettings.json  compose.yml  letrack-api.csproj
api/.config/: dotnet-tools.json
api/BackgroundServices/: EventSubscriber.cs
api/DTO/: LapDTO.cs  LapExportDTO.cs  Mapper.cs  PlayerDTO.cs  RaceDTO.cs
api/Data/: AppDbContext.cs
api/Data/Configuration/: TeamConfiguration.cs
api/Data/Migrations/: 20250108071110_LapPlayerId.Designer.cs  20250108071110_LapPlayerId.cs  20250108071940_IsValid.Designer.cs  20250108071940_IsValid.cs  (+11 more)
api/Entities/: Lap.cs  Player.cs  Race.cs  Team.cs
api/Extensions/: ApiExtensions.cs  DataExtensions.cs  GeneralExtensions.cs  HealthExtensions.cs  QueryKitExtensions.cs
api/Jobs/: TriggerJob.cs
api/Services/: MqttService.cs
assets/: LeTrack-Front.stl  letrack.fzz
fe/: .env  eslint.config.js  nginx.conf  orval.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  swagger.json
fe/src/: app.css  app.d.ts  layout.css
sensor/: boot.py  buzzer.py  config.py  event.py  example-config.py  guid.py  main.py  mqtt_local.py  test.py  track.py
sensor/mqtt_as/: __init__.py  mqtt_v5_properties.py
src/: app.css
src/lib/: types.ts  util.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
(+154 files in other folders)
